example/target/deploy/artemis-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: amqp-messaging-network
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: hono-artemis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amqp-messaging-network
      role: broker
      group: org.eclipse.hono
  template:
    metadata:
      labels:
        app: amqp-messaging-network
        role: broker
        version: "0.7-M1-SNAPSHOT"
        group: org.eclipse.hono
    spec:
      containers:
      - command:
        - /opt/artemis/bin/artemis
        - run
        - xml:/etc/hono/artemis-bootstrap.xml
        image: enmasseproject/activemq-artemis:2.2.0-4
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 9
          tcpSocket:
            port: 5671
          timeoutSeconds: 1
        name: apache-activemq-artemis
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          tcpSocket:
            port: 5671
          timeoutSeconds: 1
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /etc/hono
          name: config
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: hono-artemis-conf
