example/target/deploy/dispatch-router-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: amqp-messaging-network
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: hono-dispatch-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amqp-messaging-network
      role: router
      group: org.eclipse.hono
  template:
    metadata:
      labels:
        app: amqp-messaging-network
        role: router
        version: "0.7-M1-SNAPSHOT"
        group: org.eclipse.hono
    spec:
      containers:
      - command:
        - /sbin/qdrouterd
        - -c
        - /etc/hono/qdrouterd-with-broker.json
        image: enmasseproject/qdrouterd-base:1.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 180
          periodSeconds: 9
          tcpSocket:
            port: 5672
          timeoutSeconds: 1
        name: apache-qpid-dispatch-router
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 5672
          timeoutSeconds: 1
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /etc/hono
          name: config
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: hono-dispatch-router-conf
