example/target/deploy/influxdb-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono-metrics
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono-metrics
      role: influxdb
      group: org.eclipse.hono
  template:
    metadata:
      labels:
        app: hono-metrics
        role: influxdb
        version: "0.7-M1-SNAPSHOT"
        group: org.eclipse.hono
    spec:
      containers:
      - args:
        - -config
        - /etc/hono/influxdb.conf
        image: influxdb:1.2.4-alpine
        imagePullPolicy: IfNotPresent
        name: influxdb
        ports:
        - containerPort: 8086
          name: api
          protocol: TCP
        - containerPort: 8083
          name: admin
          protocol: TCP
        - containerPort: 2003
          name: graphite
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          tcpSocket:
            port: 2003
          timeoutSeconds: 1
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 9
          tcpSocket:
            port: 2003
          timeoutSeconds: 1
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: influxdb-storage
        - mountPath: /etc/hono
          name: conf
          readOnly: true
      volumes:
      - emptyDir: {}
        name: influxdb-storage
      - name: conf
        secret:
          secretName: influxdb-conf
