example/target/deploy/prometheus-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono-metrics
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hono-metrics
      role: influxdb
      group: org.eclipse.hono
  template:
    metadata:
      labels:
        app: hono-metrics
        role: influxdb
        version: "0.7-M1-SNAPSHOT"
        group: org.eclipse.hono
    spec:
      serviceAccountName: prometheus-sa
      containers:
      - name: prometheus
        image: prom/prometheus:v2.2.1
        imagePullPolicy: IfNotPresent
        command:
        - /bin/prometheus
        args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --storage.tsdb.retention=24h
        ports:
        - containerPort: 9090
          protocol: TCP
        resources:
          requests:
            memory: 256Mi
          limits:
            memory: 1Gi
        volumeMounts:
        - mountPath: /prometheus
          name: data
        - mountPath: /etc/prometheus
          name: config
      volumes:
      - name: config
        configMap:
          name: prometheus-conf
      - name: data
        emptyDir: {}
