example/target/deploy/artemis-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: amqp-messaging-network
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: hono-artemis
spec:
  ports:
  - port: 5671
    protocol: TCP
    targetPort: 5671
  selector:
    app: amqp-messaging-network
    role: broker
    group: org.eclipse.hono
