example/target/deploy/dispatch-router-ext-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: amqp-messaging-network
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: hono-dispatch-router-ext
spec:
  ports:
  - name: amqps
    nodePort: 30671
    port: 5671
    protocol: TCP
    targetPort: 5671
  - name: amqp
    nodePort: 30672
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: amqp-messaging-network
    role: router
    group: org.eclipse.hono
  type: NodePort
