example/target/deploy/dispatch-router-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: amqp-messaging-network
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: hono-dispatch-router
spec:
  ports:
  - port: 5673
    protocol: TCP
    targetPort: 5673
  selector:
    app: amqp-messaging-network
    role: router
    group: org.eclipse.hono
