example/target/deploy/grafana-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono-metrics
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: grafana
spec:
  ports:
  - nodePort: 31000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    role: grafana
    app: hono-metrics
    group: org.eclipse.hono
  type: NodePort
