example/target/deploy/influxdb-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono-metrics
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: influxdb
spec:
  ports:
  - name: graphite
    port: 2003
    protocol: TCP
    targetPort: 2003
  - name: admin
    port: 8083
    protocol: TCP
    targetPort: 8083
  - name: api
    port: 8086
    protocol: TCP
    targetPort: 8086
  selector:
    role: influxdb
    app: hono-metrics
    group: org.eclipse.hono
