example/target/deploy/prometheus-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono-metrics
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: prometheus
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    role: influxdb
    app: hono-metrics
    group: org.eclipse.hono
