example/target/deploy/dispatch-router-route.yml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: amqp-messaging-network
    version: "0.7-M1-SNAPSHOT"
    group: org.eclipse.hono
  name: hono-dispatch-router
spec:
  port:
    targetPort: 5671
  tls:
    termination: passthrough
  to:
    kind: Service
    name: hono-dispatch-router
